# cpp17_testing

./: .gitignore  CMakeLists.txt  README.md  cpp17.pro  main.cpp  mtp_hell.cpp
src/: bjorn.cpp  inhereited.cpp  iterator.cpp  lambdas.cpp  lambdas_op.cpp  tree.cpp  union_array.cpp
